--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
+        "target": "ES6",
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
@@ -13,6 +14,6 @@
         "sourceMap": true
     },
     "files": [
-        "shared_scripts.ts"
+        "index_scripts.ts"
     ]
 }
